# gpgpu-learning-pytorch

./: .gitignore
bert/: bert.py  bert_example1.py  bert_example2.py  bert_example3.py
cpp/: CMakeLists.txt  example-app.cpp
inference/int8/: resnet50_int8.py
profiler/bert_1/: bert_example1_profile.py
profiler/bert_2/: bert_example2_profile.py
profiler/bert_3/: bert_example3_profile.py
profiler/example/: inference.py  profiler.py  tensorboard.py
profiler/resnet50_1/: resnet50_example1_profile.py
profiler/resnet50_2/: resnet50_example2_profile.py
profiler/resnet50_3/: resnet50_example3_profile.py
resnet50/: pil.py  resnet50.py  resnet50_example1.py  resnet50_example2.py  resnet50_example3.py  resnet50_jit.py
sycl/: CMakeLists.txt  example-usm.cpp
triton/: README.md
triton/poc_scripts/ipex/: ipex_llm.py  ipex_llm_mistral.py
triton/poc_scripts/quantization/: bnb.py  bnb_inf_xpu.py  exp_custom_4bit_quant.py  exp_llama_quant.py  ipex_autoround.py  ipex_int8_dynamic_quant.py  ipex_torch_int8_quant_static.py  ipex_trans_llama.py  ipex_trans_qwen.py  ipex_trans_woq.py  neural_quant_llm.py  neural_static_quant.py  neural_static_resnet18.py  neural_woq_clm.py  neural_woq_poc.py  neural_woq_trans.py  neural_woq_trans_cpu.py  torch_int8_quant_imp.py  torch_quant_x86_inductor.py  torch_static_quant.py
triton/poc_scripts/unsloth/: llama_3_1_8b_+_unsloth_2x_faster_finetuning.py  (+2 more)
triton/unsloth_inference/: unsloth_script.sh
triton/xpu_backend/: README.md  allbuild.sh  daily_build.sh  devbuild.sh  prebuild.sh  repeat_test.sh  setup.sh  setup_driver.sh
(+24 files in other folders)
